@@ -3,12 +3,12 @@
 	"affects": ["Archer"],
 	"affectedPlayers": ["MutualAlly"],
 	"modifications": [
-		{ "value": "Cost/BuildTime", "multiply": 0.9 },
+		{ "value": "Cost/BuildTime", "multiply": 0.95 },
 		{ "value": "Cost/Resources/food", "multiply": 0.9 },
 		{ "value": "Cost/Resources/wood", "multiply": 0.9 },
 		{ "value": "Cost/Resources/stone", "multiply": 0.9 },
 		{ "value": "Cost/Resources/metal", "multiply": 0.9 }
 	],
 	"auraName": "Archer",
-	"auraDescription": "Archers −10% resource costs and training time."
+	"auraDescription": "Archers −10% resource costs and -5% training time."
 }
